--- a/FEM_Backend/.env
+++ b/FEM_Backend/.env
@@ -1,1 +1,5 @@
 SECRET_KEY="fma"
+# MONGO_DB_URL="mongodb+srv://baluramk:baluramk@cluster0.tlhgve8.mongodb.net/mydb?retryWrites=true&w=majority"
+
+MONGO_DB_PASSWORD = "baluramk"
+MONGO_DB_USERNAME = "baluramk"
